--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -262,7 +262,9 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="H56-eJ-L06"/>
                                                         <constraint firstAttribute="width" constant="80" id="IsP-42-xfj"/>
-                                                        <constraint firstAttribute="height" constant="200" id="zXR-4C-p8h"/>
+                                                        <constraint firstAttribute="height" constant="200" id="zXR-4C-p8h">
+                                                            <variation key="heightClass=regular-widthClass=regular" constant="400"/>
+                                                        </constraint>
                                                     </constraints>
                                                     <variation key="default">
                                                         <mask key="constraints">
